Modified the code of default template for getting data from the database.

--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -84,7 +84,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									 </div>
 								</div>
 							{% endif %}
-						{{ endfor }}
+						{% endfor %}
 					</div>
 				</div>
 			</div>
@@ -94,90 +94,37 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="group_2_items">
 				<div class="wrap">
 					<div id="owl-demo1" class="owl-carousel">
-						<div class="item" >
-							<div class="carousel">
-								<div class="group_2_img1">
-									<img src="images/img1.png" alt="">
-								</div>
-								<div class="group_2_text2">
-									<div class="desc">
-										<h3>Author</h3>
-										<h4>Tony Huang</h4>
+						{% for portfolio in portfolioList %}
+							<div class="item" >
+								<div class="carousel">
+									<div class="group_2_img1">
+										<img src="{{ portfolio.picture }}" alt="{{ portfolio.pictureAlt }}">
 									</div>
-									<div class="desc">
-										<h3>Role in project</h3>
-										<h4>Creator</h4>
+									<div class="group_2_text2">
+										<div class="desc">
+											<h3>Project Name</h3>
+											<h4>{{ portfolio.name }}</h4>
+										</div>
+										<div class="desc">
+											<h3>Client</h3>
+											<h4>{{ portfolio.client }}</h4>
+										</div>
+										<div class="desc">
+											<h3>Role in project</h3>
+											<h4>{{ portfolio.role }}</h4>
+										</div>
+										<div class="desc">
+											<h3>project description</h3>
+											<h4>{{ portfolio.description }}</h4>
+										</div>
 									</div>
-									<div class="desc">
-										<h3>project included</h3>
-										<h4>Node.js</h4>
+									<div class="clear"> </div>
+									<div class="brows_button_3">
+										<a href="{{ portfolio.link }}" {% if portfolio.target.length > 0 %} target="{{ portfolio.target }}" {% endif %}>Browser portfolio</a>
 									</div>
-									<div class="button_2">
-										<a href="https://github.com/starlightslo/mypress">Browser</a>
-									</div>
-								</div>
-								<div class="clear"> </div>
-								<div class="brows_button_3">
-									<a href="https://github.com/starlightslo/mypress">Browser portfolio</a>
-								</div>
-							 </div>
-						</div>
-						<div class="item">
-							<div class="carousel">
-								<div class="group_2_img1">
-									<img src="images/img2.jpg" alt="">
-								</div>
-								<div class="group_2_text2">
-									<div class="desc">
-										<h3>Author</h3>
-										<h4>Tony Huang</h4>
-									</div>
-									<div class="desc">
-										<h3>Role in project</h3>
-										<h4>Creator</h4>
-									</div>
-									<div class="desc">
-										<h3>project included</h3>
-										<h4>Node.js</h4>
-									</div>
-									<div class="button_2">
-										<a href="https://github.com/starlightslo/mypress">Browser</a>
-									</div>
-								</div>
-								<div class="clear"> </div>
-								<div class="brows_button_3">
-									<a href="https://github.com/starlightslo/mypress">Browser portfolio</a>
-								</div>
-							 </div>
-						</div>
-						<div class="item">
-							<div class="carousel">
-								<div class="group_2_img1">
-									<img src="images/img3.jpg" alt="">
-								</div>
-								<div class="group_2_text2">
-									<div class="desc">
-										<h3>Author</h3>
-										<h4>Tony Huang</h4>
-									</div>
-									<div class="desc">
-										<h3>Role in project</h3>
-										<h4>Creator</h4>
-									</div>
-									<div class="desc">
-										<h3>project included</h3>
-										<h4>Node.js</h4>
-									</div>
-									<div class="button_2">
-										<a href="https://github.com/starlightslo/mypress">Browser</a>
-									</div>
-								</div>
-								<div class="clear"> </div>
-								<div class="brows_button_3">
-									<a href="https://github.com/starlightslo/mypress">Browser portfolio</a>
-								</div>
-							 </div>
-						</div>
+								 </div>
+							</div>
+						{% endfor %}
 					</div>
 				</div>
 			</div>
@@ -234,33 +181,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div  class="wrap">
 					<div class="row-content1">
 						<h3 class="heading">Skills</h3>
-						<p class="para">
-							Iam an experienced and passionate user interface designer with interaction design background.<br>My goal is to make the world wide web a better place by designing beautiful user experiences, one site at a time.
-						</p>
-						<div class="chart" data-percent="73" data-bar-color="#35AFBA" data-animate="4000">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">User Interface</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-						<div class="chart" data-percent="85" data-bar-color="#FF6060" data-animate="2500">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">Front-end</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-						<div class="chart" data-percent="70" data-bar-color="#3AD079" data-animate="3000">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">User Experience</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-						<div class="chart" data-percent="40" data-bar-color="#58C0E3" data-animate="3500">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">User Experience</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
+						{% for skill in skillList %}
+							<div class="chart" data-percent="{{ skill.percent }}" data-bar-color="{{ skill.color }}" data-animate="{{ skill.animateTime }}">
+								<div class="chart-content">
+									<div class="percent"></div>
+									<div class="chart-title">{{ skill.name }}</div>
+								</div><!-- chart-content -->
+							</div><!-- chart -->
+						{% endfor %}
 						<div class="clear"> </div>
 					</div>	
 				</div>
@@ -273,56 +201,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h3 class="heading">Experience</h3>
 				<section class="row section">
 					<div class="row-content2">
-						<div class="timeline-label column six">
-							<h4>Work experience</h4>
-							<p>Specialties : User experience design, user interface design, brand identity, typography, print and packaging design, web standards, grid based layout.</p>
-							<div class="brows_button_4">
-								<a href="#">View on Linkedin</a>
-							</div>
-						</div><!-- timeline-label -->		
+						<!-- timeline-label -->		
 						<div class="timeline column six last">
-							<div class="year">
-								<time datetime="2013">2013</time>
-								<div class="experience">
-									<span class="circle"></span>
-									<div class="experience-img"><img src="images/asset01.jpg" alt=""></div>
-									<div class="experience-info clear-after">
-										<h5>Facebook</h5>
-										<div class="role">UI/UX Designer</div>
-										<p>October 2013 – November 2013 (2 months)Menlo Park, CA, United States of America</p>
-									</div><!-- experience-info -->
-								</div><!-- experience -->
-								<div class="experience">
-									<span class="circle"></span>
-									<div class="experience-img"><img src="images/asset02.jpg" alt=""></div>
-									<div class="experience-info clear-after">
-										<h5>Amazon</h5>
-										<div class="role">UI/UX Designer</div>
-										<p>October 2013 – November 2013 (2 months)Menlo Park, CA, United States of America</p>
-									</div><!-- experience-info -->
-								</div><!-- experience -->								
-							</div><!-- year -->
-							<div class="year">
-								<time datetime="2012">2012</time>
-								<div class="experience">
-									<span class="circle"></span>
-									<div class="experience-img"><img src="images/asset03.jpg" alt=""></div>
-									<div class="experience-info clear-after">
-										<h5>Apple</h5>
-										<div class="role">UI/UX Designer</div>
-										<p>October 2013 – November 2013 (2 months)Menlo Park, CA, United States of America</p>
-									</div><!-- experience-info -->
-								</div><!-- experience -->
-								<div class="experience">
-									<span class="circle"></span>
-									<div class="experience-img"><img src="images/asset04.jpg" alt=""></div>
-									<div class="experience-info clear-after">
-										<h5>IBM</h5>
-										<div class="role">UI/UX Designer</div>
-										<p>October 2013 – November 2013 (2 months)Menlo Park, CA, United States of America</p>
-									</div><!-- experience-info -->
-								</div><!-- experience -->								
-							</div><!-- year -->							
+							{% for year in experiences|sort(true) %}
+								<div class="year">
+									<time datetime="{{ year }}">{{ year }}</time>
+									{% for experience in experiences[year] %}
+										<div class="experience">
+											<span class="circle"></span>
+											<div class="experience-img"><img src="{{ experience.companyLogo }}" alt="{{ experience.companyName }}"></div>
+											<div class="experience-info clear-after">
+												<h5>{{ experience.companyName }}</h5>
+												<div class="role">{{ experience.role }}</div>
+												<p>{{ experience.description }}</p>
+											</div><!-- experience-info -->
+										</div><!-- experience -->
+									{% endfor %}
+								</div><!-- year -->
+							{% endfor %}							
 						</div><!-- timeline -->
 						<div class="clear"> </div>
 					</div>
@@ -333,7 +229,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="copy">
 				<p>
 					<iframe src="https://ghbtns.com/github-btn.html?user=starlightslo&repo=mypress&type=star&count=true&v=2" frameborder="0" scrolling="0" width="100px" height="20px" style="vertical-align: bottom;"></iframe>
-					© 2016 Power by <a href="#" target="_blank">MyPress</a>, Template by <a href="http://w3layouts.com" target="_blank">w3layouts</a>
+					© 2016 Power by <a href="https://github.com/starlightslo/mypress" target="_blank">MyPress</a>, Template by <a href="http://w3layouts.com" target="_blank">w3layouts</a>
 				</p>
 			</div>
 			
