--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -16,7 +16,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script src="js/jquery.min.js"></script>
 	</head>
 	<body>
-		<div class="content" id="home">
+		<div style="background: url({{ backgroundImage }}) no-repeat; background-size: 100%; background-size: cover;" class="content" id="home">
 			<div class="wrap">
 				<div class="header_style1">
 					<!-- start h_logo -->
