--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -230,6 +230,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<p>
 					<iframe src="https://ghbtns.com/github-btn.html?user=starlightslo&repo=mypress&type=star&count=true&v=2" frameborder="0" scrolling="0" width="100px" height="20px" style="vertical-align: bottom;"></iframe>
 					© 2016 Power by <a href="https://github.com/starlightslo/mypress" target="_blank">MyPress</a>, Template by <a href="http://w3layouts.com" target="_blank">w3layouts</a>
+					<br />
+					<a href="{{ language }}/auth/login">{{ T.backendManagement }}</a>
 				</p>
 			</div>
 			
