Fix the bug of the link of down-arrow was wrong.

--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 					<div class="down-arrow">
-						<a href="#AboutMe" class="scroll" ><span> </span></a>
+						<a href="#About" class="scroll" ><span> </span></a>
 					</div>
 					<link rel="stylesheet" type="text/css" href="css/slider.css" />
 				</div>
