Adding admin management page and modify some file name.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 	<head>
 		<title>{{ websiteName }} | {{ T.login }}</title>
-		<link href="../css/login_style.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="../css/login.style.css" rel="stylesheet" type="text/css" media="all"/>
 		<!-- Custom Theme files -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -19,7 +19,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="main">
 			<div class="login">
 				<div class="login-top">
-					<img src="../images/p.png">
+					<img src="../images/login.p.png">
 				</div>
 				<h1>{{ T.portalLogin }}</h1>
 				<div class="login-bottom">
