--- a/app/views/admin.menu.html
+++ b/app/views/admin.menu.html
@@ -1,7 +1,7 @@
 <div class="sidebar-nav navbar-collapse">
 	<ul class="nav" id="side-menu">
 		<li>
-		    <a href="admin" class=" hvr-bounce-to-right"><i class="fa fa-dashboard nav_icon "></i><span class="nav-label">Dashboards</span> </a>
+		    <a href="/" class=" hvr-bounce-to-right"><i class="fa fa-dashboard nav_icon "></i><span class="nav-label">Dashboards</span> </a>
 		</li>
 		<li>
 			<a href="admin/user" class=" hvr-bounce-to-right"><i class="fa fa-user nav_icon"></i> <span class="nav-label">{{ T.user }}</span> </a>
