--- a/app/views/admin.menu.html
+++ b/app/views/admin.menu.html
@@ -1,22 +1,22 @@
 <div class="sidebar-nav navbar-collapse">
 	<ul class="nav" id="side-menu">
 		<li>
-		    <a href="/" class=" hvr-bounce-to-right"><i class="fa fa-dashboard nav_icon "></i><span class="nav-label">Dashboards</span> </a>
+		    <a href="{{ server }}/{{ language }}/admin" class=" hvr-bounce-to-right"><i class="fa fa-dashboard nav_icon "></i><span class="nav-label">Dashboards</span> </a>
 		</li>
 		<li>
-			<a href="admin/user" class=" hvr-bounce-to-right"><i class="fa fa-user nav_icon"></i> <span class="nav-label">{{ T.user }}</span> </a>
+			<a href="{{ server }}/{{ language }}/admin/user" class=" hvr-bounce-to-right"><i class="fa fa-user nav_icon"></i> <span class="nav-label">{{ T.user }}</span> </a>
 		</li>
 		<li>
-			<a href="admin/portfolio" class=" hvr-bounce-to-right"><i class="fa fa-picture-o nav_icon"></i> <span class="nav-label">{{ T.portfolio }}</span> </a>
+			<a href="{{ server }}/{{ language }}/admin/portfolio" class=" hvr-bounce-to-right"><i class="fa fa-picture-o nav_icon"></i> <span class="nav-label">{{ T.portfolio }}</span> </a>
 		</li>
 		<li>
-			<a href="admin/skill" class=" hvr-bounce-to-right"><i class="fa fa-star-o nav_icon"></i> <span class="nav-label">{{ T.skill }}</span> </a>
+			<a href="{{ server }}/{{ language }}/admin/skill" class=" hvr-bounce-to-right"><i class="fa fa-star-o nav_icon"></i> <span class="nav-label">{{ T.skill }}</span> </a>
 		</li>
 		<li>
-			<a href="admin/experience" class=" hvr-bounce-to-right"><i class="fa fa-file-text-o nav_icon"></i> <span class="nav-label">{{ T.experience }}</span> </a>
+			<a href="{{ server }}/{{ language }}/admin/experience" class=" hvr-bounce-to-right"><i class="fa fa-file-text-o nav_icon"></i> <span class="nav-label">{{ T.experience }}</span> </a>
 		</li>
 		<li>
-			<a href="admin/settings" class=" hvr-bounce-to-right"><i class="fa fa-cog nav_icon"></i> <span class="nav-label">{{ T.settings }}</span> </a>
+			<a href="{{ server }}/{{ language }}/admin/settings" class=" hvr-bounce-to-right"><i class="fa fa-cog nav_icon"></i> <span class="nav-label">{{ T.settings }}</span> </a>
 		</li>
 	</ul>
 </div>
