--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -3,6 +3,21 @@
 		<h3 id="forms-horizontal">{{ user.firstName }} {{ user.lastName }}</h3>
 		<form class="form-horizontal">
 			<div class="form-group">
+				<div class="picture-group">
+					<img class="picture" src="{{ server }}/{{ user.picture }}" />
+				</div>
+				<div class="upload-block">
+					<a href="#" class="btn btn-sm btn-info btn-upload">
+						<label class="upload">
+							Upload new picture
+							<input type="file" class="upload-picture" id="picture">
+						</label>
+					</a>
+				</div>
+			</div>
+		</form>
+		<form class="form-horizontal">
+			<div class="form-group">
 				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Email</label>
 				<div class="col-sm-10">
 					<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
