--- a/app/views/admin.user.view.html
+++ b/app/views/admin.user.view.html
@@ -1,7 +1,7 @@
 <div class="grid-form">
 	<div class="grid-form1">
 		<h3 id="forms-horizontal">{{ user.firstName }} {{ user.lastName }}</h3>
-		<form class="form-horizontal">
+		<form class="form-horizontal" method="post" action="{{ server }}/admin/user/edit/{{ user.username }}">
 			<div class="form-group">
 				<div class="picture-group">
 					<img class="picture" src="{{ server }}/{{ user.picture }}" />
@@ -18,15 +18,71 @@
 		</form>
 		<form class="form-horizontal">
 			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Email</label>
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Username</label>
 				<div class="col-sm-10">
-					<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+					<h5>{{ user.username }}</h5>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputPassword3" class="col-sm-2 control-label hor-form">Password</label>
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">First Name</label>
 				<div class="col-sm-10">
-					<input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+					<input type="text" class="form-control" id="first_name" placeholder="First Name" value="{{ user.firstName }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Last Name</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="last_name" placeholder="Last Name" value="{{ user.lastName }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Email</label>
+				<div class="col-sm-10">
+					<input type="email" class="form-control" id="email" placeholder="Email" value="{{ user.email }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Introduction</label>
+				<div class="col-sm-10">
+					<textarea id="introduction" class="form-control" placeholder="Introduce youself...">{{ user.introduction }}</textarea>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Facebook</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="facebook" placeholder="Facebook" value="{{ user.facebook }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Twitter</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="twitter" placeholder="Twitter" value="{{ user.twitter }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Google</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="google" placeholder="Google" value="{{ user.google }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">LinkedIn</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="linkedin" placeholder="LinkedIn" value="{{ user.linkedin }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputEmail3" class="col-sm-2 control-label hor-form">Flickr</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="flickr" placeholder="Flickr" value="{{ user.flickr }}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="inputPassword3" class="col-sm-2 control-label hor-form">Change Password</label>
+				<div class="col-sm-10">
+					<input type="password" class="form-control" id="oldPassword" placeholder="Old Password"><br />
+					<input type="password" class="form-control" id="newPassword" placeholder="New Password"><br />
+					<input type="password" class="form-control" id="repeatedPassword" placeholder="Repeated Password">
 				</div>
 			</div>
 			<div class="form-group">
